Fixed letter text overflow

--- a/css/preview.css
+++ b/css/preview.css
@@ -47,6 +47,13 @@ iframe {
 	position: relative;
 }
 
+#letter-text-container {
+	width: 100%;
+	height: 100%;
+	padding: 40px 20px 20px 20px;
+	box-sizing: border-box;
+}
+
 #letter-text {
 	top: 0px;
 	left: 0px;
@@ -54,8 +61,8 @@ iframe {
 	height: 100%;
 	margin: 0px;
 	box-sizing: border-box;
-	padding: 40px;
 	background-color: white;
+	overflow-y: auto;
 }
 
 #letter-attachments > a {
@@ -122,6 +129,7 @@ iframe {
 
 #close-letter {
 	float: left;
+	display: block;
 }
 
 #flip-container {
